--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Base</title>
     <link href="styles/styles.css" rel="stylesheet" />
-
+    <!-- salut -->
 </head>
 <body>
     <h1>Bonjour!</h1>
